# wind_gan

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: signal.ipynb
scripts/: config_wgan.json  create_sindata.py  iapy_train.py
tests/: test_critic.py  test_dataset.py  test_dft_layer.py  test_generator.py
tests/data/: dft_model.pth  sin_wav.cvs
wind_gan/: critic.py  dataset.py  dft_layer.py  generator.py  wgan.py
