[build-system]

requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]

name = "wind_gan"
version = "0.0.1"

authors = [
  { name="Jean-François LECOMTE", email="jean-francois.lecomte@ifpen.fr" },
]

description = "WInd SImulator using GAN"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["wind_gan"]